// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAdvancedCssObject should handle CSS with missing closing brace 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "background: yellow;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle CSS with missing closing brace in nested braces 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "background: yellow;",
      },
    },
  },
  " p": {
    "advancedCss": {
      "general": {
        "css": "text-align: center;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle CSS with multiple selectors 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "background: green;",
      },
    },
  },
  " .maxi-block-button": {
    "advancedCss": {
      "general": {
        "css": "color: red;",
      },
    },
  },
  " .maxi-block-button:hover": {
    "advancedCss": {
      "general": {
        "css": "color: red;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle CSS with multiple unmatched braces 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "background: teal;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle CSS with no selectors 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "background: blue;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle CSS with pseudo selectors 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "background: green;",
      },
    },
  },
  " .maxi-block-button": {
    "advancedCss": {
      "general": {
        "css": "color: yellow;",
      },
    },
  },
  " .maxi-block-button::before": {
    "advancedCss": {
      "general": {
        "css": "content: 'before';",
      },
    },
  },
  " .maxi-block-button:hover": {
    "advancedCss": {
      "general": {
        "css": "color: red;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle CSS with selectors with spaces 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "background: green;",
      },
    },
  },
  " .maxi-block-button button .maxi-block-button__content": {
    "advancedCss": {
      "general": {
        "css": "color: yellow;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle a subset of responsive breakpoints correctly 1`] = `
{
  " .maxi-block-button": {
    "advancedCss": {
      "general": {
        "css": "background: white;",
      },
      "m": {
        "css": "font-size: 18px;",
      },
      "s": {
        "css": "font-size: 16px;",
      },
      "xxl": {
        "css": "font-size: 24px;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle all responsive breakpoints correctly 1`] = `
{
  " .maxi-block-button": {
    "advancedCss": {
      "general": {
        "css": "background: white;",
      },
      "l": {
        "css": "font-size: 20px;",
      },
      "m": {
        "css": "font-size: 18px;",
      },
      "s": {
        "css": "font-size: 16px;",
      },
      "xl": {
        "css": "font-size: 22px;",
      },
      "xs": {
        "css": "font-size: 14px;",
      },
      "xxl": {
        "css": "font-size: 24px;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle basic CSS correctly 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "background: red;",
      },
    },
  },
  " .maxi-block-button": {
    "advancedCss": {
      "general": {
        "css": "color: yellow;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle complex CSS structures across breakpoints 1`] = `
{
  "": {
    "advancedCss": {
      "general": {
        "css": "font-family: Arial, sans-serif; background-color: #f4f4f4;",
      },
      "l": {
        "css": "font-size: 15px;",
      },
      "m": {
        "css": "font-size: 14px;",
      },
      "xl": {
        "css": "font-size: 16px;",
      },
      "xxl": {
        "css": "font-size: 18px;",
      },
    },
  },
  " .maxi-block-button": {
    "advancedCss": {
      "general": {
        "css": "display: block; margin: 10px 0; text-align: center; transition: background-color 0.3s ease;",
      },
      "l": {
        "css": "padding: 13px 21px;",
      },
      "m": {
        "css": "padding: 12px 20px;",
      },
      "s": {
        "css": "padding: 11px 18px;",
      },
      "xl": {
        "css": "padding: 14px 23px;",
      },
      "xs": {
        "css": "padding: 10px 15px; font-size: 12px;",
      },
      "xxl": {
        "css": "padding: 15px 25px; border-radius: 5px;",
      },
    },
  },
  " .maxi-block-button::before": {
    "advancedCss": {
      "xl": {
        "css": "content: 'XL';",
      },
    },
  },
  " .maxi-block-button:hover": {
    "advancedCss": {
      "xxl": {
        "css": "background-color: #eee;",
      },
    },
  },
  " nav ul li": {
    "advancedCss": {
      "l": {
        "css": "display: inline-block; margin-right: 20px;",
      },
      "m": {
        "css": "display: block; margin-bottom: 10px;",
      },
    },
  },
}
`;

exports[`getAdvancedCssObject should handle empty CSS correctly 1`] = `{}`;
